--- a/Pipfile
+++ b/Pipfile
@@ -9,7 +9,7 @@ pylint = "*"
 
 [packages]
 ansible-lint = "==4.2.0"
-ansible = "==2.9.6"
+ansible = ">=2.10.0"
 arrow = "==0.15.5"
 attrs = "==19.3.0"
 bcrypt = "==3.1.7"
@@ -25,7 +25,7 @@ click-help-colors = "==0.8"
 click = "==7.1.1"
 colorama = "==0.4.3"
 cookiecutter = "==1.7.0"
-cryptography = "==2.9"
+cryptography = ">=3.2"
 docutils = "==0.15.2"
 entrypoints = "==0.3"
 fasteners = "==0.15"
@@ -45,7 +45,7 @@ pexpect = "==4.8.0"
 pluggy = "==0.13.1"
 poyo = "==0.5.0"
 ptyprocess = "==0.6.0"
-py = "==1.8.1"
+py = ">=1.10.0"
 pycodestyle = "==2.5.0"
 pycparser = "==2.20"
 pyflakes = "==2.1.1"
@@ -68,10 +68,10 @@ whichcraft = "==0.6.1"
 yamllint = "==1.22.1"
 zipp = "==3.1.0"
 Cerberus = "==1.3.2"
-Jinja2 = "==2.11.2"
+Jinja2 = ">=2.11.3"
 MarkupSafe = "==1.1.1"
 PyNaCl = "==1.3.0"
-PyYAML = "==5.3.1"
+PyYAML = ">=5.4"
 "ruamel.yaml.clib" = "==0.2.0"
 "ruamel.yaml" = "==0.16.10"
 docker = "*"
